@@ -5,7 +5,7 @@ use Data::HTML::Element::Input;
 use English;
 use Error::Pure::Utils qw(clean);
 use Tags::HTML::Element::Input;
-use Test::More 'tests' => 5;
+use Test::More 'tests' => 6;
 use Test::NoWarnings;
 use Tags::Output::Structure;
 
@@ -83,6 +83,33 @@ is_deeply(
 		['e', 'input'],
 	],
 	'Input HTML code (required checkbox with label).',
+);
+
+# Test
+$tags = Tags::Output::Structure->new;
+$obj = Tags::HTML::Element::Input->new(
+	'tags' => $tags,
+);
+$input = Data::HTML::Element::Input->new(
+	'type' => 'number',
+	'step' => 0.000001,
+	'min' => 0,
+	'max' => 1,
+);
+$obj->init($input);
+$obj->process;
+$ret_ar = $tags->flush(1);
+is_deeply(
+	$ret_ar,
+	[
+		['b', 'input'],
+		['a', 'type', 'number'],
+		['a', 'min', 0],
+		['a', 'max', 1],
+		['a', 'step', "1e-06"],
+		['e', 'input'],
+	],
+	'Input HTML code (number with min, max and step).',
 );
 
 # Test.
