@@ -1,4 +1,5 @@
 0.10
+ - Add 'step' parameter to Input.
 
 0.09 2024-03-08T09:43:54+01:00
  - Fix minimal dependency to Tags::HTML.
